<resources>
    <string name="app_name">Confectionery Shop Billing System</string>

    <string name="action_settings">Exit</string>
    <string name="un">User Name</string>
    <string name="p">Password</string>
    <string name="lg">Login</string>
    <string name="csbs">Confectionery Shop Billing System</string>
    <string name="about">About</string>
    <string name="aboutmestring">Version: 1.0.0\nDeveloped By: Vishal Anand\nEmail: vishalanandl177@gmail.com</string>
    <string name="AddCategory">Add Category</string>
    <string name="NewCustomer">New Customer</string>
    <string name="AddProduct">Add Product</string>
    <string name="OrderProducts">Order Products</string>
    <string name="ExitTheApp">Exit</string>
    <string name="categoryid">Category ID:</string>
    <string name="id">ID</string>
    <string name="categoryname">Category Name:</string>
    <string name="categoryname1">Category Name</string>
    <string name="add">Add Category</string>
    <string name="cat1">Category ID:</string>
    <string name="cat2">Category ID</string>
    <string name="pi">Product ID:</string>
    <string name="pi1">Product ID</string>
    <string name="pn">Product Name:</string>
    <string name="pn1">Product Name</string>
    <string name="pri">Price:</string>
    <string name="pri1">Price</string>
    <string name="stock">Stock:</string>
    <string name="stock1">Stock</string>
    <string name="addp">Add Product</string>
    <string name="ci">Customer ID:</string>
    <string name="ci1">Customer ID</string>
    <string name="cnm">Customer Name:</string>
    <string name="cm2">Name</string>
    <string name="contact1">Contact:</string>
    <string name="c">Contact</string>
    <string name="Addr">Address:</string>
    <string name="adrs1">Address</string>
    <string name="addcustomer">Add Customer</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_home">Confectionery Shop</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="ci2">Category ID:</string>
    <string name="id2">ID</string>
    <string name="cn1">Category Name:</string>
    <string name="n">Name</string>
    <string name="ad2">Add Category</string>
    <string name="title_activity_add_product">Add Product</string>
    <string name="title_activity_customer">Customer</string>
    <string name="back">BACK</string>
    <string name="dp">Display Category</string>
    <string name="idtode">ID to Delete</string>
    <string name="d">Delete</string>
    <string name="search">Search</string>
    <string name="sp">Show Products</string>
    <string name="del">Delete</string>
    <string name="tod">ID to Delete</string>
    <string name="sc">Show Customers</string>
    <string name="search1">Search</string>
    <string name="search2">Search Name</string>
    <string name="search3">Search Customers</string>
    <string name="pid">Product ID</string>
    <string name="hint">ID</string>
    <string name="cid">Customer ID</string>
</resources>
